--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 *.lo
 *.o
 *.obj
+*.exe
+*.out
+CMakeFiles/
+cmake_install.cmake
+Makefile
+bin/
+
+# Логи от тестов
 
 # Precompiled Headers
 *.gch
@@ -30,3 +38,4 @@
 *.exe
 *.out
 *.app
+test.log
